Changes to Bean-handling in BeanSchema and BeanIterator